-- change api project to project from template by vs19

--- a/PrometheusApi2/appsettings.json
+++ b/PrometheusApi2/appsettings.json
@@ -1,12 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=c:\\Prometeus.db;Version=3;"
-    "DefaultConnection": "Filename=Prometeus.db"
+    "DefaultConnection": "Filename=Prometheus.db"
   }
 }
