--- a/PrometheusApi2/Properties/launchSettings.json
+++ b/PrometheusApi2/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2987",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:51319",
+      "sslPort": 44396
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PrometheusApi": {
+    "PrometheusApi2": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
@@ -29,7 +29,14 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values"
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44397"
+      },
+      "httpPort": 51320,
+      "useSSL": true,
+      "sslPort": 44397
     }
   }
 }
